--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,15 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor
+	annotationProcessor("org.mapstruct:mapstruct-processor:1.5.3.Final")
+	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor
+	testAnnotationProcessor("org.mapstruct:mapstruct-processor:1.5.3.Final")
+	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct
+	implementation("org.mapstruct:mapstruct:1.5.3.Final")
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok-mapstruct-binding
+	implementation("org.projectlombok:lombok-mapstruct-binding:0.2.0")
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
