--- a/build.gradle
+++ b/build.gradle
@@ -27,12 +27,18 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
-    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.3.Final"
-    implementation "org.mapstruct:mapstruct:1.5.3.Final"
-    implementation "org.projectlombok:lombok-mapstruct-binding:0.2.0"
-    compileOnly 'org.projectlombok:lombok'
+
+    implementation "org.projectlombok:lombok"
+    implementation "org.mapstruct:mapstruct:1.5.2.Final"
+
+    annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.2.Final"
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
     runtimeOnly 'org.postgresql:postgresql'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
