--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ repositories {
     mavenCentral()
 }
 
+// ✅ Jackson 버전 통일용 전역 변수
+ext {
+    jacksonVersion = '2.17.0'
+}
 
 dependencies {
     // Spring Starter
