--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,13 @@ ext {
 
 
 dependencies {
+
     // Spring Starters
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 
     // Lombok + MapStruct
     implementation 'org.projectlombok:lombok'
