--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   profiles:
     active: prod
   datasource:
-    url: jdbc:postgresql://localhost:5432/findex
+    url: jdbc:postgresql://sb02-findex-team03-production-1b20.up.railway.app/
     username: junhyeok
     password: 1234
     driver-class-name: org.postgresql.Driver
@@ -15,3 +15,4 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
