--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,10 @@ spring:
     username: postgres
     password: paaLVKDCkjopiGOskumyTShEYYTxsDHS
     driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-timezone: Asia/Seoul
+    jackson:
+      time-zone: Asia/Seoul
 
   jpa:
     hibernate:
