feature: railway에 띄운 데이터베이스와 연동

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: prod
   datasource:
-    url: jdbc:postgresql://shuttle.proxy.rlwy.net:5432/railway
+    url: jdbc:postgresql://interchange.proxy.rlwy.net:44271/railway
     username: postgres
     password: yUdJNOqYLgjaSelQKgDhLybVrYCCdvHD
     driver-class-name: org.postgresql.Driver
